--- a/index.html
+++ b/index.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Normalize All CSS styles  -->
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <!-- main css file -->
+    <link rel="stylesheet" href="css/style.css"/>
+    <!-- font awesome library -->
+    <link rel="stylesheet" href="css/all.min.css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+
     <title>Loan agency</title>
 </head>
 <body>
-    
+
+    <header>
+        <div class="container">
+            <nav>
+                <img src="./images/logo.png" alt="logo of the website">
+                <div class="list">
+                    <div class="list-icon">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="#">services</a></li>
+                        <li><a href="#">protfolio</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <div class="landing">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <div class="benefits">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <div class="services">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <div class="protfolio">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <div class="about">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <div class="contact">
+        <div class="container">
+
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
+
 </body>
 </html>
