--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="container">
             <nav>
                 <img src="./images/logo.png" alt="logo of the website">
-                <div class="list">
-                    <div class="list-icon">
+                <div class="links">
+                    <div class="links-icon">
                         <div class="bar"></div>
                         <div class="bar"></div>
                         <div class="bar"></div>
