Done with landing part

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
     <div class="landing">
         <div class="container">
-
+            <h1>hello there</h1>
+            <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
         </div>
     </div>
 
