done with benefits part and make it responsive with all devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>Loan agency</title>
 </head>
@@ -51,7 +51,21 @@
 
     <div class="benefits">
         <div class="container">
-
+            <div class="card">
+                <i class="fa-sharp fa-solid fa-wand-magic-sparkles fa-3x"></i>
+                <h2>tell us your idea</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="card">
+                <i class="fa-sharp fa-regular fa-gem fa-3x"></i>
+                <h2>tell us your idea</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="card">
+                <i class="fa-solid fa-earth-asia fa-3x"></i>
+                <h2>tell us your idea</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
         </div>
     </div>
 
