Done with first version of all parts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Normalize All CSS styles  -->
-    <link rel="stylesheet" href="css/normalize.css"/>
+    <!-- <link rel="stylesheet" href="css/normalize.css"/> -->
     <!-- main css file -->
     <link rel="stylesheet" href="css/style.css"/>
     <!-- font awesome library -->
@@ -21,6 +21,7 @@
 </head>
 <body>
 
+    <!-- Start Header Part -->
     <header>
         <div class="container">
             <nav>
@@ -41,63 +42,193 @@
             </nav>
         </div>
     </header>
+    <!-- End Header Part -->
 
+    <!-- Start Landing Part -->
     <div class="landing">
         <div class="container">
             <h1>hello there</h1>
             <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
         </div>
     </div>
+    <!-- End Landing Part -->
 
-    <div class="benefits">
+    <!-- Start Benefits Part -->
+    <div class="section benefits">
         <div class="container">
             <div class="card">
                 <i class="fa-sharp fa-solid fa-wand-magic-sparkles fa-3x"></i>
-                <h2>tell us your idea</h2>
+                <h3>tell us your idea</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
             </div>
             <div class="card">
                 <i class="fa-sharp fa-regular fa-gem fa-3x"></i>
-                <h2>tell us your idea</h2>
+                <h3>We Will Do All The Work</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
             </div>
             <div class="card">
                 <i class="fa-solid fa-earth-asia fa-3x"></i>
-                <h2>tell us your idea</h2>
+                <h3>Your Product is Worldwide</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
             </div>
         </div>
     </div>
+    <!-- End Benefits Part -->
 
-    <div class="services">
+    <!-- Start Services Part -->
+    <div class="section services">
         <div class="container">
+            <h2>services</h2>
+            <p class="quote">don't be busy, be productive</p>
+            <div class="content">
+                <div class="services-list">
 
+                    <div class="service">
+                        <i class="fas fa-palette fa-2x"></i>
+                        <div class="service-info">
+                            <h3>
+                                Graphic Design
+                            </h3>
+                            <p>
+                                Graphic design is the process of visual communication and problem-solving using one or more of typography, photography and illustration.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service">
+                        <i class="fas fa-vector-square fa-2x"></i>
+                        <div class="service-info">
+                            <h3>
+                                Web Design
+                            </h3>
+                            <p>
+                                Web design encompasses many different skills and disciplines in the production and maintenance of websites.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service">
+                        <i class="fa-brands fa-sketch fa-2x"></i>
+                        <div class="service-info">
+                            <h3>
+                                UI & UX
+                            </h3>
+                            <p>
+                                Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service">
+                        <i class="fas fa-pencil-ruler fa-2x"></i>
+                        <div class="service-info">
+                            <h3>
+                                Web Development
+                            </h3>
+                            <p>
+                                Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="img-service">
+                    <img src="./images/services.jpeg" alt="">
+                </div>
+            </div>
         </div>
     </div>
+    <!-- End Services Part -->
 
-    <div class="protfolio">
+    <!-- Start Portfolio Part -->
+    <div class="section portfolio">
         <div class="container">
+            <h2>protfolio</h2>
+            <p class="quote">If you do it right, it will last forever.</p>
+            <div class="projects">
 
+                <div class="project">
+                    <div class="image-holder">
+                        <img src="./images/portfolio-1.jpeg" alt="Project Picture">
+                    </div>
+                    <div class="project-info">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="image-holder">
+                        <img src="./images/portfolio-2.jpeg" alt="Project Picture">
+                    </div>
+                    <div class="project-info">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="image-holder">
+                        <img src="./images/portfolio-3.jpeg" alt="Project Picture">
+                    </div>
+                    <div class="project-info">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
+    <!-- End Portfolio Part -->
 
-    <div class="about">
+    <!-- Start About Part -->
+    <div class="section about">
         <div class="container">
-
+            <h2>about</h2>
+            <p class="quote">Less is more work</p>
+            <div class="content">
+                <div class="image-holder">
+                    <img src="./images/about.jpeg" alt="an image of about section">
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!</p>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima, similique inventore esse, alias, sed quo officia?</p>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- End About Part -->
 
-    <div class="contact">
+    <!-- Start Contact Part -->
+    <div class="section contact">
         <div class="container">
+            <h2>Contact</h2>
+            <p class="quote">We are born to create</p>
 
+            <div class="content">
+                <p class="contact-message">Feel free to drop us a line at:</p>
+                <a href="mailto:leonagency@mail.com">leonagency@mail.com</a>
+                <div class="social-networks">
+                    <span>Find Us On Social Networks</span>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- End Contact Part -->
 
+    <!-- Start Footer Part -->
     <footer>
         <div class="container">
-
+            <p>made with love by <a href="https://github.com/skeet1" target="_blank">skeet</a> &copy; 2023 <span>Leon</span> all right reserved</p>
         </div>
     </footer>
+    <!-- End Footer Part -->
 
 </body>
 </html>
