Refactoring Services Part
now for me it's perfect and more responsive, add media queries for this part next to normal view prop to make refactoring easy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Normalize All CSS styles  -->
-    <!-- <link rel="stylesheet" href="css/normalize.css"/> -->
+    <link rel="stylesheet" href="css/normalize.css"/>
     <!-- main css file -->
     <link rel="stylesheet" href="css/style.css"/>
     <!-- font awesome library -->
@@ -206,7 +206,7 @@
     <div class="section contact">
         <div class="container">
             <h2>Contact</h2>
-            <p class="quote">We are born to create</p>
+            <p class="quote">We are born to code</p>
 
             <div class="content">
                 <p class="contact-message">Feel free to drop us a line at:</p>
