--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
 
@@ -174,7 +174,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
 
