add id's for section and move to them from navbar

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
-                        <li><a href="#">services</a></li>
-                        <li><a href="#">protfolio</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="#services">services</a></li>
+                        <li><a href="#protfolio">protfolio</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#contact">contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -76,7 +76,7 @@
     <!-- End Benefits Part -->
 
     <!-- Start Services Part -->
-    <div class="section services">
+    <div class="section services" id="services">
         <div class="container">
             <h2>services</h2>
             <p class="quote">don't be busy, be productive</p>
@@ -142,7 +142,7 @@
     <!-- End Services Part -->
 
     <!-- Start Portfolio Part -->
-    <div class="section portfolio">
+    <div class="section portfolio" id="portfolio">
         <div class="container">
             <h2>protfolio</h2>
             <p class="quote">If you do it right, it will last forever.</p>
@@ -184,7 +184,7 @@
     <!-- End Portfolio Part -->
 
     <!-- Start About Part -->
-    <div class="section about">
+    <div class="section about" id="about">
         <div class="container">
             <h2>about</h2>
             <p class="quote">Less is more work</p>
@@ -203,7 +203,7 @@
     <!-- End About Part -->
 
     <!-- Start Contact Part -->
-    <div class="section contact">
+    <div class="section contact" id="contact">
         <div class="container">
             <h2>Contact</h2>
             <p class="quote">We are born to code</p>
