add a button to scroll up

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <title>Loan agency</title>
 </head>
 <body>
-
     <!-- Start Header Part -->
-    <header>
+    <header id="top">
         <div class="container">
             <nav>
                 <img src="./images/logo.png" alt="logo of the website">
@@ -44,6 +43,9 @@
     </header>
     <!-- End Header Part -->
 
+    <div class="goto-top" id="goto-top">
+        <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
     <!-- Start Landing Part -->
     <div class="landing">
         <div class="container">
@@ -229,6 +231,5 @@
         </div>
     </footer>
     <!-- End Footer Part -->
-
 </body>
 </html>
